[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/shader_wars/Competition.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Competition" type="PanelContainer"]
margin_left = 314.735
margin_top = -651.828
margin_right = 944.735
margin_bottom = -579.828
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 623.0
margin_bottom = 75.0

[node name="HBC" type="HBoxContainer" parent="VBC"]
margin_right = 616.0
margin_bottom = 20.0

[node name="DemoCompetitionTitle" type="Label" parent="VBC/HBC"]
margin_right = 553.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Demo Competition Title"
align = 1

[node name="1stPlaceLabel" type="Label" parent="VBC/HBC"]
margin_left = 557.0
margin_right = 590.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "1st:"
align = 1

[node name="1stPlaceValue" type="Label" parent="VBC/HBC"]
margin_left = 594.0
margin_right = 616.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "30"
align = 1

[node name="HBC2" type="HBoxContainer" parent="VBC"]
margin_top = 24.0
margin_right = 616.0
margin_bottom = 44.0

[node name="DemoValueLabel" type="Label" parent="VBC/HBC2"]
margin_right = 171.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Current Demo Value:"
align = 1

[node name="DemoValue" type="Label" parent="VBC/HBC2"]
margin_left = 175.0
margin_right = 186.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBC/HBC2"]
margin_left = 190.0
margin_right = 550.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="2ndPlaceLabel" type="Label" parent="VBC/HBC2"]
margin_left = 554.0
margin_right = 590.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "2nd:"
align = 1

[node name="2ndPlaceValue" type="Label" parent="VBC/HBC2"]
margin_left = 594.0
margin_right = 616.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "20"
align = 1

[node name="HBC3" type="HBoxContainer" parent="VBC"]
margin_top = 48.0
margin_right = 616.0
margin_bottom = 68.0

[node name="MarginContainer2" type="MarginContainer" parent="VBC/HBC3"]
margin_right = 553.0
margin_bottom = 20.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3rdPlaceLabel" type="Label" parent="VBC/HBC3"]
margin_left = 557.0
margin_right = 590.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "3rd:"
align = 1

[node name="3rdPlaceValue" type="Label" parent="VBC/HBC3"]
margin_left = 594.0
margin_right = 616.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "10"
align = 1
